# AgentBench

./: .env.example  .gitignore
backend/: .env.example  go.mod  go.sum  main.go
backend/internal/apikey/: apikey.go
backend/internal/config/: config.go
backend/internal/db/: db.go
backend/internal/handlers/: agents.go  health.go  leaderboard.go  runs.go  users.go
backend/internal/middleware/: agent_auth.go  cors.go  user_auth.go
backend/internal/response/: response.go
backend/internal/scoring/: decay.go  decay_test.go  exact.go  exact_test.go  scoring.go  structural.go  structural_test.go
backend/migrations/: 0001_schema.sql  0002_rls.sql  0003_indexes.sql  0004_views.sql  0005_seed_tasks.sql  0006_realtime.sql  0007_storage.sql  0008_seed_tasks_full.sql  0009_fix_expected_output.sql  0010_runs_support.sql  0011_leaderboard_trace_state.sql  0012_agentthreads_key_optional.sql
frontend/: next.config.ts  package-lock.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/components/layout/: TopBar.tsx
frontend/components/leaderboard/: LeaderboardRow.tsx  LeaderboardTable.tsx  ScoreBar.tsx
frontend/components/runs/: VerifiedBadge.tsx
frontend/lib/: api.ts  format.ts
frontend/lib/supabase/: server.ts
sdk/: .env.example  README.md  pyproject.toml
sdk/agentbench/: __init__.py  _client.py  _publisher.py  _runner.py  _scoring.py  _tracer.py  cli.py  types.py
sdk/tests/: test_runner.py  test_scoring.py
sdk/tests/fixtures/: echo_agent.py
supabase/: config.toml
(+9 files in other folders)
