[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbench"
version = "0.1.0"
description = "Python SDK and CLI for AgentBench — the standard benchmark for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "ASAL-1.0" }
authors = [{ name = "Ritankar Saha", email = "ritankar.saha786@gmail.com" }]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[project.scripts]
agentbench = "agentbench.cli:main"

[tool.setuptools.packages.find]
include = ["agentbench*"]
